# CBC_CPP_DOCKER

./: CMakeLists.txt  Dockerfile  README.md  build-docker.sh  build-for-linux-simple.sh  cleanup.sh  deploy.sh  run-docker.sh  save-and-upload-image.sh  upload-linux-executable.sh  upload-readme.sh
build-linux/: Dockerfile  compile-simple.sh  compile.sh
build-linux-simple/: Dockerfile  main.cpp
build-native-simple/: main.cpp
cpp/: build-native-simple.sh  main.cpp
cpp/build-linux-simple/: compile.sh
cpp/build-native-simple/: CBC
docker/: Dockerfile.cpp  Dockerfile.go
docs/: cpp-guide.md  deployment.md  go-guide.md
examples/cpp/: simple_mip.cpp
examples/go/: simple_mip.go
go/: build-go-native.sh
go/bridge/: cbc_bridge.cpp
go/build-linux/: Dockerfile  compile.sh
go/build-linux/go/: build-go-for-linux.sh
go/build-linux/go/bridge/: cbc_bridge.h
go/cbc/: cbc.go
scripts/: build-docker-cpp-server.sh  build-docker-cpp.sh  build-docker-go.sh  deploy-cpp-new.sh  deploy-cpp.sh  run-docker-cpp.sh  run-docker-go.sh  save-and-upload-image-cpp.sh  upload-linux-executable-cpp.sh
